bugfix: spacing mobile

--- a/styles/BlogCard.module.css
+++ b/styles/BlogCard.module.css
@@ -71,5 +71,6 @@
 @media only screen and (max-width: 600px) {
     .card {
         width: 100%;
+        padding: 8px;
     }
 }
